// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Journal entry renders a safe public surface after its vault is locked 1`] = `
"<div className="stack" style={"gap":6,"padding":"6px 20px 0"}>
  <span className="note note--lead" style={"fontSize":"var(--text-2xl)","fontWeight":800,"letterSpacing":"-0.02em"}>
    "Good morning"
  <span className="row row--wrap" style={"gap":10}>
    <span className="note note--muted">
      "Monday, October 5"
<div className="today-grid">
  <section className="card">
    <h2 className="card__title">
      "A quick check-in"
    <span className="checkin-optional">
      "Optional — skip anything you like."
    <fieldset className="checkin-fields" disabled=true>
      <div className="checkin-grid">
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "How does today feel? Optional — one tap is enough."
          <div aria-label="How does today feel? Optional — one tap is enough." className="mood-scale" role="group">
            <button aria-label="Heavy" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.2 7.2 L10.1 8.5">
                  <path d="M16.8 7.2 L13.9 8.5">
                  <path d="M8 17.6 Q12 12.8 16 17.6">
              <span className="mood-item__label">
                "Heavy"
            <button aria-label="Low" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.5 7.7 L10.1 8.7">
                  <path d="M16.5 7.7 L13.9 8.7">
                  <path d="M8.5 15.4 H15.5">
              <span className="mood-item__label">
                "Low"
            <button aria-label="Okay" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
              <span className="mood-item__label">
                "Okay"
            <button aria-label="Good" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.5 8.6 L10.1 7.8">
                  <path d="M16.5 8.6 L13.9 7.8">
                  <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
              <span className="mood-item__label">
                "Good"
            <button aria-label="Light" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.2 8.8 L10.1 7.5">
                  <path d="M16.8 8.8 L13.9 7.5">
                  <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
              <span className="mood-item__label">
                "Light"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "And your energy? Optional."
          <div aria-label="And your energy? Optional." className="bar-scale" role="group">
            <button aria-label="Drained" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell">
                <span className="bar-bars__cell">
              <span className="bar-item__label">
                "Drained"
            <button aria-label="Steady" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell">
              <span className="bar-item__label">
                "Steady"
            <button aria-label="Energized" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
              <span className="bar-item__label">
                "Energized"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "How did you sleep? Optional."
          <div aria-label="How did you sleep? Optional." className="dot-scale" role="group">
            <button aria-label="1 — Rough" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "1"
              <span className="dot-item__label">
                "Rough"
            <button aria-label="2 — Poor" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "2"
              <span className="dot-item__label">
                "Poor"
            <button aria-label="3 — Okay" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "3"
              <span className="dot-item__label">
                "Okay"
            <button aria-label="4 — Good" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "4"
              <span className="dot-item__label">
                "Good"
            <button aria-label="5 — Rested" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "5"
              <span className="dot-item__label">
                "Rested"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "What shaped today?"
          <div className="row row--wrap">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "work"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "family"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "friends"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "exercise"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "outdoors"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "rest"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "creative"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "health"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "money"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "travel"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
    <p className="note note--muted" style={"whiteSpace":"pre-wrap"}>
      "Details are optional and travel inside the entry's encryption — the server sees only ciphertext."
  <section className="card">
    <h2 className="card__title">
      "Today's entry"
    <label className="field">
      <span className="field__label">
        "How was today?"
      <textarea className="textarea" disabled=true maxLength=100000 placeholder="Write freely. Only you can read this." rows=8 value="">
    <button className="btn btn--small" disabled=false type="button">
      "Retry restoring encrypted draft"
    <div className="row row--wrap">
      <button className="chip" disabled=false type="button">
        "Somewhere I went today…"
      <button className="chip" disabled=false type="button">
        "I felt most like myself when…"
      <button className="chip" disabled=false type="button">
        "Something that surprised me…"
    <div className="stack" style={"gap":"var(--space-2)"}>
      <button className="btn btn--block" disabled=true type="button">
        <svg aria-hidden="true" fill="none" focusable="false" height=17 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=17>
          <path d="M5 12.5l4.5 4.5L19 7.5">
        "Save entry"
      <span className="row" style={"justifyContent":"center"}>
        <button className="btn btn--ghost btn--small" disabled=true type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
            <path d="M6 6l12 12">
            <path d="M18 6 6 18">
          "Discard draft"
      <span className="row" style={"gap":6,"justifyContent":"center"}>
        <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
          <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
          <path d="M9 11.6l2.1 2.1 4-4.2">
        <span className="note note--muted">
          "Your draft stays on this device, encrypted, until you save or discard it.""
`;

exports[`Journal entry renders its settled public empty-account surface in en 1`] = `
"<div className="stack" style={"gap":6,"padding":"6px 20px 0"}>
  <span className="note note--lead" style={"fontSize":"var(--text-2xl)","fontWeight":800,"letterSpacing":"-0.02em"}>
    "Good morning"
  <span className="row row--wrap" style={"gap":10}>
    <span className="note note--muted">
      "Monday, October 5"
<div className="today-grid">
  <section className="card">
    <h2 className="card__title">
      "A quick check-in"
    <span className="checkin-optional">
      "Optional — skip anything you like."
    <fieldset className="checkin-fields" disabled=false>
      <div className="checkin-grid">
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "How does today feel? Optional — one tap is enough."
          <div aria-label="How does today feel? Optional — one tap is enough." className="mood-scale" role="group">
            <button aria-label="Heavy" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.2 7.2 L10.1 8.5">
                  <path d="M16.8 7.2 L13.9 8.5">
                  <path d="M8 17.6 Q12 12.8 16 17.6">
              <span className="mood-item__label">
                "Heavy"
            <button aria-label="Low" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.5 7.7 L10.1 8.7">
                  <path d="M16.5 7.7 L13.9 8.7">
                  <path d="M8.5 15.4 H15.5">
              <span className="mood-item__label">
                "Low"
            <button aria-label="Okay" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
              <span className="mood-item__label">
                "Okay"
            <button aria-label="Good" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.5 8.6 L10.1 7.8">
                  <path d="M16.5 8.6 L13.9 7.8">
                  <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
              <span className="mood-item__label">
                "Good"
            <button aria-label="Light" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.2 8.8 L10.1 7.5">
                  <path d="M16.8 8.8 L13.9 7.5">
                  <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
              <span className="mood-item__label">
                "Light"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "And your energy? Optional."
          <div aria-label="And your energy? Optional." className="bar-scale" role="group">
            <button aria-label="Drained" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell">
                <span className="bar-bars__cell">
              <span className="bar-item__label">
                "Drained"
            <button aria-label="Steady" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell">
              <span className="bar-item__label">
                "Steady"
            <button aria-label="Energized" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
              <span className="bar-item__label">
                "Energized"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "How did you sleep? Optional."
          <div aria-label="How did you sleep? Optional." className="dot-scale" role="group">
            <button aria-label="1 — Rough" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "1"
              <span className="dot-item__label">
                "Rough"
            <button aria-label="2 — Poor" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "2"
              <span className="dot-item__label">
                "Poor"
            <button aria-label="3 — Okay" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "3"
              <span className="dot-item__label">
                "Okay"
            <button aria-label="4 — Good" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "4"
              <span className="dot-item__label">
                "Good"
            <button aria-label="5 — Rested" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "5"
              <span className="dot-item__label">
                "Rested"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "What shaped today?"
          <div className="row row--wrap">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "work"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "family"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "friends"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "exercise"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "outdoors"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "rest"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "creative"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "health"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "money"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "travel"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
    <p className="note note--muted" style={"whiteSpace":"pre-wrap"}>
      "Details are optional and travel inside the entry's encryption — the server sees only ciphertext."
  <section className="card">
    <h2 className="card__title">
      "Today's entry"
    <label className="field">
      <span className="field__label">
        "How was today?"
      <textarea className="textarea" disabled=false maxLength=100000 placeholder="Write freely. Only you can read this." rows=8 value="">
    <div className="row row--wrap">
      <button className="chip" disabled=false type="button">
        "Somewhere I went today…"
      <button className="chip" disabled=false type="button">
        "I felt most like myself when…"
      <button className="chip" disabled=false type="button">
        "Something that surprised me…"
    <div className="stack" style={"gap":"var(--space-2)"}>
      <button className="btn btn--block" disabled=false type="button">
        <svg aria-hidden="true" fill="none" focusable="false" height=17 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=17>
          <path d="M5 12.5l4.5 4.5L19 7.5">
        "Save entry"
      <span className="row" style={"justifyContent":"center"}>
        <button className="btn btn--ghost btn--small" disabled=true type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
            <path d="M6 6l12 12">
            <path d="M18 6 6 18">
          "Discard draft"
      <span className="row" style={"gap":6,"justifyContent":"center"}>
        <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
          <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
          <path d="M9 11.6l2.1 2.1 4-4.2">
        <span className="note note--muted">
          "Your draft stays on this device, encrypted, until you save or discard it.""
`;

exports[`Journal entry renders its settled public empty-account surface in es 1`] = `
"<div className="stack" style={"gap":6,"padding":"6px 20px 0"}>
  <span className="note note--lead" style={"fontSize":"var(--text-2xl)","fontWeight":800,"letterSpacing":"-0.02em"}>
    "Buenos días"
  <span className="row row--wrap" style={"gap":10}>
    <span className="note note--muted">
      "lunes, 5 de octubre"
<div className="today-grid">
  <section className="card">
    <h2 className="card__title">
      "Un registro rápido"
    <span className="checkin-optional">
      "Opcional: puedes saltar lo que quieras."
    <fieldset className="checkin-fields" disabled=false>
      <div className="checkin-grid">
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "¿Cómo se siente el día de hoy? Opcional — un toque basta."
          <div aria-label="¿Cómo se siente el día de hoy? Opcional — un toque basta." className="mood-scale" role="group">
            <button aria-label="Pesado" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.2 7.2 L10.1 8.5">
                  <path d="M16.8 7.2 L13.9 8.5">
                  <path d="M8 17.6 Q12 12.8 16 17.6">
              <span className="mood-item__label">
                "Pesado"
            <button aria-label="Bajo" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.5 7.7 L10.1 8.7">
                  <path d="M16.5 7.7 L13.9 8.7">
                  <path d="M8.5 15.4 H15.5">
              <span className="mood-item__label">
                "Bajo"
            <button aria-label="Normal" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
              <span className="mood-item__label">
                "Normal"
            <button aria-label="Bien" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.5 8.6 L10.1 7.8">
                  <path d="M16.5 8.6 L13.9 7.8">
                  <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
              <span className="mood-item__label">
                "Bien"
            <button aria-label="Ligero" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
              <span aria-hidden="true" className="mood-face">
                <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
                  <circle cx="12" cy="12" r="9.2">
                  <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
                  <path d="M7.2 8.8 L10.1 7.5">
                  <path d="M16.8 8.8 L13.9 7.5">
                  <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
              <span className="mood-item__label">
                "Ligero"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "¿Y su energía? Opcional."
          <div aria-label="¿Y su energía? Opcional." className="bar-scale" role="group">
            <button aria-label="Baja" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell">
                <span className="bar-bars__cell">
              <span className="bar-item__label">
                "Baja"
            <button aria-label="Estable" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell">
              <span className="bar-item__label">
                "Estable"
            <button aria-label="Alta" aria-pressed=false className="bar-item" type="button">
              <span aria-hidden="true" className="bar-bars">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
                <span className="bar-bars__cell bar-bars__cell--on">
              <span className="bar-item__label">
                "Alta"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "¿Cómo durmió? Opcional."
          <div aria-label="¿Cómo durmió? Opcional." className="dot-scale" role="group">
            <button aria-label="1 — Difícil" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "1"
              <span className="dot-item__label">
                "Difícil"
            <button aria-label="2 — Mala" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "2"
              <span className="dot-item__label">
                "Mala"
            <button aria-label="3 — Regular" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "3"
              <span className="dot-item__label">
                "Regular"
            <button aria-label="4 — Buena" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "4"
              <span className="dot-item__label">
                "Buena"
            <button aria-label="5 — Reparadora" aria-pressed=false className="dot-item" type="button">
              <span aria-hidden="true" className="dot">
                "5"
              <span className="dot-item__label">
                "Reparadora"
        <div className="stack" style={"gap":"var(--space-2)"}>
          <span className="checkin-label">
            "¿Qué marcó tu día?"
          <div className="row row--wrap">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Trabajo"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Familia"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Amistades"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Ejercicio"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Aire libre"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Descanso"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Creatividad"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Salud"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Dinero"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
            <button aria-pressed=false className="chip" disabled=false type="button">
              "Viaje"
              <span className="chip__check">
                <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
                  <path d="M5 12.5l4.5 4.5L19 7.5">
    <p className="note note--muted" style={"whiteSpace":"pre-wrap"}>
      "Los detalles son opcionales y viajan dentro del cifrado de la entrada — el servidor solo ve texto cifrado."
  <section className="card">
    <h2 className="card__title">
      "La entrada de hoy"
    <label className="field">
      <span className="field__label">
        "¿Cómo estuvo hoy?"
      <textarea className="textarea" disabled=false maxLength=100000 placeholder="Escriba con libertad. Solo usted puede leer esto." rows=8 value="">
    <div className="row row--wrap">
      <button className="chip" disabled=false type="button">
        "Un lugar al que fui hoy…"
      <button className="chip" disabled=false type="button">
        "Me sentí más yo cuando…"
      <button className="chip" disabled=false type="button">
        "Algo que me sorprendió…"
    <div className="stack" style={"gap":"var(--space-2)"}>
      <button className="btn btn--block" disabled=false type="button">
        <svg aria-hidden="true" fill="none" focusable="false" height=17 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=17>
          <path d="M5 12.5l4.5 4.5L19 7.5">
        "Guardar entrada"
      <span className="row" style={"justifyContent":"center"}>
        <button className="btn btn--ghost btn--small" disabled=true type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
            <path d="M6 6l12 12">
            <path d="M18 6 6 18">
          "Descartar borrador"
      <span className="row" style={"gap":6,"justifyContent":"center"}>
        <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
          <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
          <path d="M9 11.6l2.1 2.1 4-4.2">
        <span className="note note--muted">
          "Su borrador permanece en este dispositivo, cifrado, hasta que lo guarde o lo descarte.""
`;
